# LSI

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CoverageTestResult.sh  DependencyInstall.sh  KnownIssues.md  LICENSE.md  README.md
CLI/: CMakeLists.txt
CLI/include/: CLIbuiltinDrawAST.h  GUIbuiltinAST.h  GUIbuiltinDrawAST.h  image.h
CLI/src/: CLIbuiltinDrawAST.cpp  CMakeLists.txt  image.cpp  main.cpp
CLI/test/: test.sh
Doc/: LICENSE.md
GUI/: CMakeLists.txt  lib
GUI/include/: Controller.h  GUIbuiltinAST.h  GUIbuiltinDrawAST.h  GUIbuiltinFunc.h  builtinDraw.h  formatString.h  textController.h  textWindow.h  utility.h
GUI/src/: CMakeLists.txt  Controller.cpp  GUIbuiltinAST.cpp  GUIbuiltinDrawAST.cpp  GUIbuiltinFunc.cpp  builtinDraw.cpp  formatString.cpp  main.cpp  textController.cpp  textWindow.cpp  utility.cpp
GUI/test/: CMakeLists.txt  drawingBoardTest.cpp  textTest.cpp
Interface/CLI/: CMakeLists.txt
Interface/CLI/include/: CLIbuiltinDrawAST.h
Interface/CLI/src/: CLIbuiltinDrawAST.cpp  CMakeLists.txt  image.cpp  main.cpp
Interface/CLI/test/: test.sh
Interface/GUI/: CMakeLists.txt
Interface/GUI/include/: Controller.h  GUIbuiltinDrawAST.h  formatString.h
Interface/GUI/src/: CMakeLists.txt  GUIbuiltinDrawAST.cpp  formatString.cpp  main.cpp
Interface/GUI/test/: drawingBoardTest.cpp
Interpreter/: CMakeLists.txt
Interpreter/evaluator/: AST.cpp  builtinAST.cpp  context.cpp  coreAST.cpp  visitor.cpp
Interpreter/include/: AST.h  basicParser.h  builtinAST.h  context.h  exception.h  lexers.h  parser.h  testMacro.h  visitor.h
Interpreter/lib/: Base.scm  Test.scm
Interpreter/parser/: basicParser.cpp  functionParser.cpp  keywordParser.cpp  lexers.cpp
Interpreter/src/: AST.cpp  CMakeLists.txt  basicParser.cpp  builtinFunction.cpp  context.cpp  functionParser.cpp  keywordAndOperatorParser.cpp  keywordParser.cpp  lexers.cpp  parser.cpp
Interpreter/test/: CMakeLists.txt  FramelibParsingTest.cpp  basicParserTest.cpp  builtinFunctionTest.cpp  driver.cpp  functionParsingTest.cpp  keywordAndOperatorTest.cpp  keywordParsingTest.cpp  keywordTest.cpp  lexersTest.cpp  librariesParsingTest.cpp  parserTest.cpp
Interpreter/test/benchmark/: CMakeLists.txt  benchmark.cpp
Interpreter/test/core/: CMakeLists.txt  basicParserTest.cpp  builtinFunctionTest.cpp  contextTest.cpp  exceptionTest.cpp  functionParsingTest.cpp  functionTest.cpp  keywordTest.cpp
Interpreter/test/lexer/: CMakeLists.txt  lexersTest.cpp
Interpreter/test/lisplib/: BaselibParsingTest.cpp  CMakeLists.txt  FramelibParsingTest.cpp  libParsingTest.cpp
Interpreter/test/parser/: CMakeLists.txt  builtinFunctionTest.cpp  contextTest.cpp  exceptionTest.cpp  functionParsingTest.cpp  keywordTest.cpp
Interpreter/test/stdlib/: CMakeLists.txt  FramelibParsingTest.cpp
Scheme/: Base.scm  Frame.scm  GUI.scm  Shape.scm  Test.scm  benchmark.scm  setup.scm
Scheme/demo/: Benz.scm  painter1.scm  painter2.scm  painter3.scm  triangle.scm
Scheme/stdlib/: Base.scm  Frame.scm  Shape.scm
Scheme/test/: CLITest.scm
Test_driver/: CMakeLists.txt
Utility/: CoverageTestResult.sh
cmakeModules/: CodeCoverage.cmake
test/: CMakeLists.txt  main.cpp
